--- a/src/MeuPonto.Web/Modules/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Index.cshtml
@@ -17,11 +17,11 @@
     if (ViewBag.HasPerfil)
     {
         <div class="d-grid col-sm-10 col-md-8 col-lg-6 mx-auto gap-2 mb-3">
-            <a class="btn btn-primary btn-lg Marcacao Ponto" asp-page="./Pontos/Marcar">
+            <a class="btn btn-primary btn-lg Marcacao Ponto" asp-page="./Pontos/Marcar" target="_modal">
                 <i class="bi bi-check2-circle"></i>
                 Marcar Ponto
             </a>
-            <a class="btn btn-primary btn-lg" asp-page="/Pontos/Comprovantes/Guardar">
+            <a class="btn btn-primary btn-lg" asp-page="/Pontos/Comprovantes/Guardar" target="_modal">
                 <i class="bi bi-qr-code"></i>
                 Guardar Comprovante de Ponto
             </a>
@@ -68,7 +68,7 @@
         {
             <div class="alert alert-info" role="alert">
                 Use a busca acima para <b>apurar uma folha de ponto</b>.
-                Se preferir, você também pode <a class="Abertura Folha" asp-page="/Pontos/Folhas/Abrir">abrir uma folha nova</a>.
+                Se preferir, você também pode <a class="Abertura Folha" asp-page="/Pontos/Folhas/Abrir" target="_modal">abrir uma folha nova</a>.
             </div>
         }
         else
@@ -140,19 +140,19 @@
                         <div class="card-body">
                             @if (Model.Folha.StatusId == Pontos.Folhas.StatusEnum.Aberta)
                             {
-                                <a class="card-link text-decoration-none" asp-page="/Pontos/Folhas/Fechar" asp-route-id="@Model.Folha.Id">
+                                <a class="card-link text-decoration-none" asp-page="/Pontos/Folhas/Fechar" asp-route-id="@Model.Folha.Id" target="_modal">
                                     Fechar
                                     <i class="bi bi-lock"></i>
                                 </a>
                             }
                             else
                             {
-                                <a class="card-link text-decoration-none" asp-page="/Pontos/Folhas/Reabrir" asp-route-id="@Model.Folha.Id">
+                                <a class="card-link text-decoration-none" asp-page="/Pontos/Folhas/Reabrir" asp-route-id="@Model.Folha.Id" target="_modal">
                                     Reabrir
                                     <i class="bi bi-unlock"></i>
                                 </a>
                             }
-                            <a class="card-link text-decoration-none edicao" asp-page="/Pontos/Folhas/Editar" asp-route-id="@Model.Folha.Id">
+                            <a class="card-link text-decoration-none edicao" asp-page="/Pontos/Folhas/Editar" asp-route-id="@Model.Folha.Id" target="_modal">
                                 Editar
                                 <i class="bi bi-pencil"></i>
                             </a>
@@ -162,7 +162,7 @@
                 <div class="col">
                     <div class="card apuracaoMensal">
                         <div class="card-header">
-                            Apuração Mensal
+                            @Html.DisplayNameFor(model => model.Folha.ApuracaoMensal)
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -457,7 +457,7 @@
     else
     {
         <div class="d-grid gap-2 col-sm-10 col-md-8 col-lg-6 mx-auto mb-3">
-            <a class="btn btn-primary btn-lg criacao perfil" asp-page="/Perfis/Criar">
+            <a class="btn btn-primary btn-lg criacao perfil" asp-page="/Perfis/Criar" target="_modal">
                 <i class="bi bi-plus-circle"></i>
                 Criar Novo Perfil
             </a>
