--- a/src/MeuPonto.Web/Modules/Trabalhadores/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Trabalhadores/Index.cshtml
@@ -71,7 +71,7 @@
                             <a class="btn btn-link Detalhe" asp-page="./Detalhar" asp-route-id="@item.Id" title="Detalhar">
                                 <i class="bi bi-card-text"></i>
                             </a>
-                            <a class="btn btn-link Edicao" asp-page="./Editar" asp-route-id="@item.Id" title="Editar">
+                            <a class="btn btn-link Edicao" asp-page="./Editar" asp-route-id="@item.Id" title="Editar" target="_modal">
                                 <i class="bi bi-pencil"></i>
                             </a>
                         </div>
