--- a/src/MeuPonto.Web/Modules/Pontos/Detalhar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Detalhar.cshtml
@@ -5,137 +5,138 @@
     ViewData["Title"] = "Detalhar Ponto";
 }
 
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
-        <li class="breadcrumb-item"><a asp-page="./Index">Pontos</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Detalhar</li>
-    </ol>
-</nav>
+@section Breadcrumb {
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
+            <li class="breadcrumb-item"><a asp-page="./Index">Pontos</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Detalhar</li>
+        </ol>
+    </nav>
+}
 
-<h1>@ViewData["Title"] <span class="badge bg-secondary">@Html.DisplayFor(model => model.Ponto.DataHora)</span></h1>
+@section Title {
+    @ViewData["Title"] <span class="badge bg-secondary">@Html.DisplayFor(model => model.Ponto.DataHora)</span>
+}
 
-<div class="card">
-    <div class="card-header">
-        <ul class="nav nav-tabs card-header-tabs">
-            <li class="me-1">
-                <div class="btn-group">
-                    <a class="btn btn-primary" asp-page="./Criar">
-                        <i class="bi bi-plus-circle"></i>
-                        Criar Novo
-                    </a>
-                    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="parent">
-                        <span class="visually-hidden">Toggle Dropdown</span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a class="dropdown-item marcacao ponto" asp-page="./Marcar">
-                                <i class="bi bi-check2-circle"></i>
-                                Marcar Ponto
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page">
-                    <i class="bi bi-card-text"></i>
-                    Detalhar
+@section CardHeader {
+    <ul class="nav nav-tabs card-header-tabs">
+        <li class="me-1">
+            <div class="btn-group">
+                <a class="btn btn-primary" asp-page="./Criar" target="_modal" target="_modal">
+                    <i class="bi bi-plus-circle"></i>
+                    Criar Novo
                 </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" asp-page="./Editar" asp-route-id="@Model.Ponto?.Id">
-                    <i class="bi bi-pencil"></i>
-                    <span class="d-none d-sm-inline">Editar</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-danger" asp-page="./Excluir" asp-route-id="@Model.Ponto?.Id">
-                    <i class="bi bi-trash"></i>
-                    <span class="d-none d-sm-inline">Excluir</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <div class="card-body">
-        <dl class="row g-3 Ponto">
-            <dt class="col-sm-3 Perfil">
-                @Html.DisplayNameFor(model => model.Ponto.Perfil)
-            </dt>
-            <dd class="col-sm-9 Perfil">
-                <a class="text-decoration-none" asp-page="/Perfis/Detalhar" asp-route-id="@Model.Ponto.PerfilId" title="Detalhar Perfil" target="_blank">
-                    @Html.DisplayFor(model => model.Ponto.Perfil.Nome)
-                    <i class="bi bi-link-45deg"></i>
-                </a>
-            </dd>
-            <dt class="col-sm-3 DataHora">
-                @Html.DisplayNameFor(model => model.Ponto.DataHora)
-            </dt>
-            <dd class="col-sm-9 DataHora">
-                @Html.DisplayFor(model => model.Ponto.DataHora)
-            </dd>
-            <dt class="col-sm-3 Momento">
-                @Html.DisplayNameFor(model => model.Ponto.MomentoId)
-            </dt>
-            <dd class="col-sm-9 Momento">
-                @Html.DisplayFor(model => model.Ponto.MomentoId)
-                <input asp-for="Ponto.MomentoId" type="hidden" />
-            </dd>
-            <dt class="col-sm-3 Pausa">
-                @Html.DisplayNameFor(model => model.Ponto.PausaId)
-            </dt>
-            <dd class="col-sm-9 Pausa">
-                @Html.DisplayFor(model => model.Ponto.PausaId)
-                <input asp-for="Ponto.PausaId" type="hidden" />
-            </dd>
-            <dt class="col-sm-3 Estimado">
-                @Html.DisplayNameFor(model => model.Ponto.Estimado)
-            </dt>
-            <dd class="col-sm-9 Estimado">
-                @Html.DisplayFor(model => model.Ponto.Estimado)
-            </dd>
-            <dt class="col-sm-3 Observacao">
-                @Html.DisplayNameFor(model => model.Ponto.Observacao)
-            </dt>
-            <dd class="col-sm-9 Observacao">@Html.DisplayFor(model => model.Ponto.Observacao)</dd>
-        </dl>
-        <div class="accordion" id="accordionDetalhes">
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDetalhesTecnicos" aria-expanded="false" aria-controls="collapseDetalhesTecnicos">
-                        Detalhes Técnicos
-                    </button>
-                </h2>
-                <div id="collapseDetalhesTecnicos" class="accordion-collapse collapse" data-bs-parent="#accordionDetalhes">
-                    <div class="accordion-body">
-                        <dl class="row g-3">
-                            <dt class="col-sm-3">
-                                @Html.DisplayNameFor(model => model.Ponto.Id)
-                            </dt>
-                            <dd class="col-sm-9">
-                                @Html.DisplayFor(model => model.Ponto.Id)
-                            </dd>
-                            @*<dt class="col-sm-3">
-                                @Html.DisplayNameFor(model => model.Ponto.PartitionKey)
-                            </dt>
-                            <dd class="col-sm-9">
-                                @Html.DisplayFor(model => model.Ponto.PartitionKey)
-                            </dd>*@
-                            <dt class="col-sm-3">
-                                @Html.DisplayNameFor(model => model.Ponto.CreationDate)
-                            </dt>
-                            <dd class="col-sm-9">
-                                @Html.DisplayFor(model => model.Ponto.CreationDate)
-                            </dd>
-                            <dt class="col-sm-3">
-                                @Html.DisplayNameFor(model => model.Ponto.Version)
-                            </dt>
-                            <dd class="col-sm-9">
-                                @Html.DisplayFor(model => model.Ponto.Version)
-                            </dd>
-                        </dl>
-                    </div>
-                </div>
+                <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false" data-bs-reference="parent">
+                    <span class="visually-hidden">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item marcacao ponto" asp-page="./Marcar" target="_modal">
+                            <i class="bi bi-check2-circle"></i>
+                            Marcar Ponto
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page">
+                <i class="bi bi-card-text"></i>
+                Detalhar
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-page="./Editar" asp-route-id="@Model.Ponto?.Id" target="_modal">
+                <i class="bi bi-pencil"></i>
+                <span class="d-none d-sm-inline">Editar</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-danger" asp-page="./Excluir" asp-route-id="@Model.Ponto?.Id" target="_modal">
+                <i class="bi bi-trash"></i>
+                <span class="d-none d-sm-inline">Excluir</span>
+            </a>
+        </li>
+    </ul>
+}
+
+<dl class="row g-3 Ponto">
+    <dt class="col-sm-3 Perfil">
+        @Html.DisplayNameFor(model => model.Ponto.Perfil)
+    </dt>
+    <dd class="col-sm-9 Perfil">
+        <a class="text-decoration-none" asp-page="/Perfis/Detalhar" asp-route-id="@Model.Ponto.PerfilId" title="Detalhar Perfil" target="_blank">
+            @Html.DisplayFor(model => model.Ponto.Perfil.Nome)
+            <i class="bi bi-link-45deg"></i>
+        </a>
+    </dd>
+    <dt class="col-sm-3 DataHora">
+        @Html.DisplayNameFor(model => model.Ponto.DataHora)
+    </dt>
+    <dd class="col-sm-9 DataHora">
+        @Html.DisplayFor(model => model.Ponto.DataHora)
+    </dd>
+    <dt class="col-sm-3 Momento">
+        @Html.DisplayNameFor(model => model.Ponto.MomentoId)
+    </dt>
+    <dd class="col-sm-9 Momento">
+        @Html.DisplayFor(model => model.Ponto.MomentoId)
+        <input asp-for="Ponto.MomentoId" type="hidden" />
+    </dd>
+    <dt class="col-sm-3 Pausa">
+        @Html.DisplayNameFor(model => model.Ponto.PausaId)
+    </dt>
+    <dd class="col-sm-9 Pausa">
+        @Html.DisplayFor(model => model.Ponto.PausaId)
+        <input asp-for="Ponto.PausaId" type="hidden" />
+    </dd>
+    <dt class="col-sm-3 Estimado">
+        @Html.DisplayNameFor(model => model.Ponto.Estimado)
+    </dt>
+    <dd class="col-sm-9 Estimado">
+        @Html.DisplayFor(model => model.Ponto.Estimado)
+    </dd>
+    <dt class="col-sm-3 Observacao">
+        @Html.DisplayNameFor(model => model.Ponto.Observacao)
+    </dt>
+    <dd class="col-sm-9 Observacao">@Html.DisplayFor(model => model.Ponto.Observacao)</dd>
+</dl>
+<div class="accordion" id="accordionDetalhes">
+    <div class="accordion-item">
+        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDetalhesTecnicos" aria-expanded="false" aria-controls="collapseDetalhesTecnicos">
+                Detalhes Técnicos
+            </button>
+        </h2>
+        <div id="collapseDetalhesTecnicos" class="accordion-collapse collapse" data-bs-parent="#accordionDetalhes">
+            <div class="accordion-body">
+                <dl class="row g-3">
+                    <dt class="col-sm-3">
+                        @Html.DisplayNameFor(model => model.Ponto.Id)
+                    </dt>
+                    <dd class="col-sm-9">
+                        @Html.DisplayFor(model => model.Ponto.Id)
+                    </dd>
+                    @*<dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Ponto.PartitionKey)
+                    </dt>
+                    <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Ponto.PartitionKey)
+                    </dd>*@
+                    <dt class="col-sm-3">
+                        @Html.DisplayNameFor(model => model.Ponto.CreationDate)
+                    </dt>
+                    <dd class="col-sm-9">
+                        @Html.DisplayFor(model => model.Ponto.CreationDate)
+                    </dd>
+                    <dt class="col-sm-3">
+                        @Html.DisplayNameFor(model => model.Ponto.Version)
+                    </dt>
+                    <dd class="col-sm-9">
+                        @Html.DisplayFor(model => model.Ponto.Version)
+                    </dd>
+                </dl>
             </div>
         </div>
     </div>
@@ -147,7 +148,7 @@
 
 <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
     <div class="btn-group" role="group" aria-label="First group">
-        <a class="btn btn-primary" asp-page="./Comprovantes/Criar" asp-route-pontoId="@Model.Ponto.Id">
+        <a class="btn btn-primary" asp-page="./Comprovantes/Criar" asp-route-pontoId="@Model.Ponto.Id" title="Criar Comprovante" target="_modal">
             <i class="bi bi-plus-circle"></i>
             Criar Novo
         </a>
@@ -176,13 +177,13 @@
                 <tr>
                     <td class="p-1" scope="row">
                         <div class="btn-group" role="group">
-                            <a class="btn btn-link rounded-0" asp-page="./Comprovantes/Detalhar" asp-route-id="@item.Id" title="Detalhar">
+                            <a class="btn btn-link rounded-0" asp-page="./Comprovantes/Detalhar" asp-route-id="@item.Id" title="Detalhar Comprovante">
                                 <i class="bi bi-card-text"></i>
                             </a>
-                            <a class="btn btn-link edicao" asp-page="./Comprovantes/Editar" asp-route-id="@item.Id" title="Editar">
+                            <a class="btn btn-link edicao" asp-page="./Comprovantes/Editar" asp-route-id="@item.Id" title="Editar Comprovante" target="_modal">
                                 <i class="bi bi-pencil"></i>
                             </a>
-                            <a class="btn btn-link text-danger exclusao rounded-0" asp-page="./Comprovantes/Excluir" asp-route-id="@item.Id" title="Excluir">
+                            <a class="btn btn-link text-danger exclusao rounded-0" asp-page="./Comprovantes/Excluir" asp-route-id="@item.Id" title="Excluir Comprovante" target="_modal">
                                 <i class="bi bi-trash"></i>
                             </a>
                         </div>
