--- a/src/MeuPonto.Web/Modules/Pontos/Folhas/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Folhas/Index.cshtml
@@ -16,7 +16,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="btn-group mb-3">
-    <a class="btn btn-primary" asp-page="./Criar">
+    <a class="btn btn-primary" asp-page="./Criar" target="_modal">
         <i class="bi bi-plus-circle"></i>
         Criar Nova
     </a>
@@ -25,7 +25,7 @@
     </button>
     <ul class="dropdown-menu">
         <li>
-            <a class="dropdown-item Abertura Folha" asp-page="./Abrir">
+            <a class="dropdown-item Abertura Folha" asp-page="./Abrir" target="_modal">
                 <i class="bi bi-file-earmark-plus"></i>
                 Abrir Folha
             </a>
@@ -144,13 +144,13 @@
                             <a class="btn btn-link rounded-0" asp-page="./Detalhar" asp-route-id="@item.Id" title="Detalhar">
                                 <i class="bi bi-card-text"></i>
                             </a>
-                            <a class="btn btn-link Edicao" asp-page="./Editar" asp-route-id="@item.Id" title="Editar">
+                            <a class="btn btn-link Edicao" asp-page="./Editar" asp-route-id="@item.Id" title="Editar" target="_modal">
                                 <i class="bi bi-pencil"></i>
                             </a>
-                            <a class="btn btn-link text-danger Exclusao" asp-page="./Excluir" asp-route-id="@item.Id" title="Excluir">
+                            <a class="btn btn-link text-danger Exclusao" asp-page="./Excluir" asp-route-id="@item.Id" title="Excluir" target="_modal">
                                 <i class="bi bi-trash"></i>
                             </a>
-                            <a class="btn btn-link rounded-0 Fechamento" asp-page="./Fechar" asp-route-id="@item.Id" title="Fechar">
+                            <a class="btn btn-link rounded-0 Fechamento" asp-page="./Fechar" asp-route-id="@item.Id" title="Fechar" target="_modal">
                                 <i class="bi bi-file-earmark-check"></i>
                             </a>
                         </div>
