--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @inject IAuthorizationService AuthorizationService
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -10,7 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MeuPonto.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/MeuPonto.Web.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -94,11 +93,62 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            @RenderBody()
+            @await RenderSectionAsync("Breadcrumb", required: false)
+
+            @if (IsSectionDefined("Title"))
+            {
+                <h1>
+                    @await RenderSectionAsync("Title")
+                </h1>
+            }
+
+            @if (IsSectionDefined("FormActions"))
+            {
+                <form method="post">
+                    @if (IsSectionDefined("CardHeader"))
+                    {
+                        <div class="card">
+                            <div class="card-header">
+                                @await RenderSectionAsync("CardHeader")
+                            </div>
+                            <div class="card-body">
+                                @RenderBody()
+                            </div>
+                            <div class="card-footer">
+                                @await RenderSectionAsync("FormActions")
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        @RenderBody()
+
+                        @await RenderSectionAsync("FormActions")
+                    }
+                </form>
+            }
+            else
+            {
+                @if (IsSectionDefined("CardHeader"))
+                {
+                    <div class="card">
+                        <div class="card-header">
+                            @await RenderSectionAsync("CardHeader")
+                        </div>
+                        <div class="card-body">
+                            @RenderBody()
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    @RenderBody()
+                }
+            }
         </main>
     </div>
-    @*
-    <footer class="border-top footer text-muted pt-3">
+
+    @*<footer class="border-top footer text-muted pt-3">
 
     </footer>*@
 
@@ -198,15 +248,33 @@
         }
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
-    @await RenderSectionAsync("Scripts", required: false)
+    <div class="modal" id="formModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Formulário</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body d-flex justify-content-center align-items-center">
+                    <div class="spinner-border text-primary" aria-hidden="true"></div>
+                    <strong class="my-5 mx-3" role="status">Carregando...</strong>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     @if (ViewData.ShowModal())
     {
         <div class="modal-backdrop fade show"></div>
     }
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
